--- a/.abf.yml
+++ b/.abf.yml
@@ -1,3 +1,3 @@
 sources:
-  tds.doc.tar.xz: e970113d07f35577737ff28883e1b520000cea11
-  tds.tar.xz: 372c758b52c64766b296670efd91f0f9ec2dccda
+  tds.doc.r64477.tar.xz: 12c2cd07fdff2d53c587cb93574d1989dc4e9ec0
+  tds.r64477.tar.xz: 800e2aeb482bb53b8dac017b6ef1541afff6177b
